crates/excalidraw-mermaid/tests/snapshots/excalidraw@sequence_basic.snap
---
source: crates/excalidraw-mermaid/tests/snapshots.rs
description: Mermaid → Excalidraw JSON for sequence_basic.mmd
expression: json
---
{
  "type": "excalidraw",
  "version": 2,
  "source": "excalidraw-mermaid:sequence",
  "elements": [
    {
      "type": "rectangle",
      "id": "mm-seq-node-actor-top-Alice",
      "x": 0.0,
      "y": 0.0,
      "width": 150.0,
      "height": 65.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#dde9f7",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-seq-nodetext-actor-top-Alice",
          "type": "text"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false,
      "roundness": {
        "type": 3
      }
    },
    {
      "type": "text",
      "id": "mm-seq-nodetext-actor-top-Alice",
      "x": 0.0,
      "y": 0.0,
      "width": 150.0,
      "height": 65.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Alice",
      "originalText": "Alice",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-seq-node-actor-top-Alice"
    },
    {
      "type": "arrow",
      "id": "mm-seq-lifeline-actor-top-Alice",
      "x": 75.0,
      "y": 65.0,
      "width": 0.0,
      "height": 213.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "dashed",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          0.0,
          213.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": null,
      "startBinding": {
        "elementId": "mm-seq-node-actor-top-Alice",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": null,
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "rectangle",
      "id": "mm-seq-node-actor-top-Bob",
      "x": 200.0,
      "y": 0.0,
      "width": 150.0,
      "height": 65.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#dde9f7",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-seq-nodetext-actor-top-Bob",
          "type": "text"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false,
      "roundness": {
        "type": 3
      }
    },
    {
      "type": "text",
      "id": "mm-seq-nodetext-actor-top-Bob",
      "x": 200.0,
      "y": 0.0,
      "width": 150.0,
      "height": 65.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Bob",
      "originalText": "Bob",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-seq-node-actor-top-Bob"
    },
    {
      "type": "arrow",
      "id": "mm-seq-lifeline-actor-top-Bob",
      "x": 275.0,
      "y": 65.0,
      "width": 0.0,
      "height": 213.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "dashed",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          0.0,
          213.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": null,
      "startBinding": {
        "elementId": "mm-seq-node-actor-top-Bob",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": null,
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "text",
      "id": "mm-seq-edgelabel-msg-0",
      "x": 174.0,
      "y": 80.0,
      "width": 68.6171875,
      "height": 19.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Hello Bob",
      "originalText": "Hello Bob",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": null
    },
    {
      "type": "arrow",
      "id": "mm-seq-edge-msg-0",
      "x": 76.0,
      "y": 109.0,
      "width": 195.0,
      "height": 0.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          195.0,
          0.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "triangle",
      "startBinding": null,
      "endBinding": null,
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "text",
      "id": "mm-seq-edgelabel-msg-1",
      "x": 177.0,
      "y": 124.0,
      "width": 55.0,
      "height": 19.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Hi Alice",
      "originalText": "Hi Alice",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": null
    },
    {
      "type": "arrow",
      "id": "mm-seq-edge-msg-1",
      "x": 274.0,
      "y": 153.0,
      "width": 195.0,
      "height": 0.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          -195.0,
          0.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "triangle",
      "startBinding": null,
      "endBinding": null,
      "elbowed": false,
      "lastCommittedPoint": null
    }
  ],
  "appState": {
    "viewBackgroundColor": "#ffffff",
    "gridSize": 20,
    "theme": "light"
  },
  "files": {}
}
