crates/excalidraw-mermaid/tests/snapshots/excalidraw@state_basic.snap
---
source: crates/excalidraw-mermaid/tests/snapshots.rs
description: Mermaid → Excalidraw JSON for state_basic.mmd
expression: json
---
{
  "type": "excalidraw",
  "version": 2,
  "source": "excalidraw-mermaid:stateDiagram",
  "elements": [
    {
      "type": "rectangle",
      "id": "mm-state-node-Idle",
      "x": 29.51953125,
      "y": 72.0,
      "width": 42.8125,
      "height": 40.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e7f5ff",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-state-nodetext-Idle",
          "type": "text"
        },
        {
          "id": "mm-state-edge-edge0",
          "type": "arrow"
        },
        {
          "id": "mm-state-edge-edge1",
          "type": "arrow"
        },
        {
          "id": "mm-state-edge-edge2",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false,
      "roundness": {
        "type": 3
      }
    },
    {
      "type": "text",
      "id": "mm-state-nodetext-Idle",
      "x": 29.51953125,
      "y": 72.0,
      "width": 42.8125,
      "height": 40.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Idle",
      "originalText": "Idle",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-state-node-Idle"
    },
    {
      "type": "rectangle",
      "id": "mm-state-node-Running",
      "x": 14.49609375,
      "y": 186.0,
      "width": 72.859375,
      "height": 40.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e7f5ff",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-state-nodetext-Running",
          "type": "text"
        },
        {
          "id": "mm-state-edge-edge1",
          "type": "arrow"
        },
        {
          "id": "mm-state-edge-edge2",
          "type": "arrow"
        },
        {
          "id": "mm-state-edge-edge3",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false,
      "roundness": {
        "type": 3
      }
    },
    {
      "type": "text",
      "id": "mm-state-nodetext-Running",
      "x": 14.49609375,
      "y": 186.0,
      "width": 72.859375,
      "height": 40.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Running",
      "originalText": "Running",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-state-node-Running"
    },
    {
      "type": "ellipse",
      "id": "mm-state-pseudo-root_end",
      "x": 38.92578125,
      "y": 271.0,
      "width": 24.0,
      "height": 24.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#1e1e1e",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-state-edge-edge3",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "ellipse",
      "id": "mm-state-pseudo-root_start",
      "x": 38.92578125,
      "y": 3.0,
      "width": 24.0,
      "height": 24.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#1e1e1e",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-state-edge-edge0",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "arrow",
      "id": "mm-state-edge-edge0",
      "x": 50.92578125,
      "y": 22.0,
      "width": 0.5,
      "height": 50.5,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          0.0,
          25.0
        ],
        [
          0.5,
          50.5
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "arrow",
      "startBinding": {
        "elementId": "mm-state-pseudo-root_start",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-state-node-Idle",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "arrow",
      "id": "mm-state-edge-edge1",
      "x": 42.29337993421053,
      "y": 112.5,
      "width": 17.394942434210527,
      "height": 74.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          -17.394942434210527,
          36.5
        ],
        [
          0.0,
          74.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "arrow",
      "startBinding": {
        "elementId": "mm-state-node-Idle",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-state-node-Running",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "arrow",
      "id": "mm-state-edge-edge2",
      "x": 60.55818256578947,
      "y": 186.5,
      "width": 16.394942434210527,
      "height": 74.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          16.394942434210527,
          -37.5
        ],
        [
          0.0,
          -74.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "arrow",
      "startBinding": {
        "elementId": "mm-state-node-Running",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-state-node-Idle",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "arrow",
      "id": "mm-state-edge-edge3",
      "x": 51.42578125,
      "y": 226.5,
      "width": 0.5,
      "height": 49.5,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          -0.5,
          24.5
        ],
        [
          -0.5,
          49.5
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "arrow",
      "startBinding": {
        "elementId": "mm-state-node-Running",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-state-pseudo-root_end",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    }
  ],
  "appState": {
    "viewBackgroundColor": "#ffffff",
    "gridSize": 20,
    "theme": "light"
  },
  "files": {}
}
