crates/excalidraw-mermaid/tests/snapshots/excalidraw@unsupported_gantt.snap
---
source: crates/excalidraw-mermaid/tests/snapshots.rs
description: Mermaid → Excalidraw placeholder JSON for unsupported_gantt.mmd
expression: json
---
{
  "type": "excalidraw",
  "version": 2,
  "source": "excalidraw-mermaid:gantt",
  "elements": [
    {
      "type": "rectangle",
      "id": "placeholder-gantt",
      "x": 0.0,
      "y": 0.0,
      "width": 320.0,
      "height": 120.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#fff5f5",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "placeholder-gantt-text",
          "type": "text"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false,
      "roundness": {
        "type": 3
      }
    },
    {
      "type": "text",
      "id": "placeholder-gantt-text",
      "x": 0.0,
      "y": 0.0,
      "width": 320.0,
      "height": 120.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Mermaid diagram type \"gantt\" is not yet supported by excalidraw-mermaid",
      "originalText": "Mermaid diagram type \"gantt\" is not yet supported by excalidraw-mermaid",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "placeholder-gantt"
    }
  ],
  "appState": {
    "viewBackgroundColor": "#ffffff",
    "gridSize": 20,
    "theme": "light"
  },
  "files": {}
}
