crates/excalidraw-mermaid/tests/snapshots/svg@class_basic.snap
---
source: crates/excalidraw-mermaid/tests/snapshots.rs
description: Rendered SVG for class_basic.mmd
---
<?xml version="1.0" encoding="UTF-8"?><svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="234" height="381" viewBox="-18.5 -18.5 233.40625 381"><rect x="-18.5" y="-18.5" width="233.40625" height="381" fill="#ffffff"/><g id="excalidraw-content"><g data-element="rectangle" id="mm-class-node-Animal"><path d="M0.39 -1.29 L198.31 1.35 L195.6 166.96 L1.47 168.93" stroke="none" stroke-width="0" fill="#e9ecef"/><path d="M-1.84 0.71 C40.95 -2.71, 80.04 -3.1, 195.37 0.55 M0.73 -0.23 C67.8 1.48, 136 1.83, 196.45 0.51 M194.98 1.01 C198.78 34.55, 199.36 65.66, 195.57 169.67 M196.4 -0.63 C197.48 41.2, 197.94 82.88, 196.4 168.95 M196 166.63 C128.54 171.18, 58.35 168.48, -0.66 168.49 M197.04 167.83 C119.31 166.82, 41.35 165.88, -0.62 167.95 M0.55 167.68 C1.13 124.19, 0.87 79.93, -0.76 -0.53 M-0.59 168.62 C-0.11 107.96, -1.52 48.6, -0.73 1" stroke="#1e1e1e" stroke-width="2" fill="none"/></g><text data-element="text" id="mm-class-nodetext-Animal" x="98.203125" y="46.8" fill="#1e1e1e" font-family="Excalifont, cursive" font-size="16" text-anchor="middle" data-font-source="fallback:Excalifont"><tspan x="98.203125" y="46.8">Animal</tspan><tspan x="98.203125" dy="20">+String name</tspan><tspan x="98.203125" dy="20">+int age</tspan><tspan x="98.203125" dy="20">---</tspan><tspan x="98.203125" dy="20">+makeSound() : void</tspan></text><g data-element="rectangle" id="mm-class-node-Dog"><path d="M31.15 216.71 L167.54 219.35 L164.83 342.96 L32.23 344.93" stroke="none" stroke-width="0" fill="#e9ecef"/><path d="M28.93 218.71 C59.04 215.88, 85.45 215.49, 164.6 218.55 M31.5 217.77 C77.18 218.99, 124 219.34, 165.68 218.51 M164.21 219.01 C167.73 244.13, 168.31 266.81, 164.8 345.67 M165.64 217.37 C166.35 248.91, 166.81 280.29, 165.63 344.95 M165.24 342.63 C119.56 346.78, 71.16 344.09, 30.11 344.49 M166.28 343.83 C112.86 343.42, 59.2 342.47, 30.14 343.95 M31.32 343.68 C32.02 311.28, 31.76 278.11, 30 217.47 M30.17 344.62 C30.88 298.89, 29.48 254.46, 30.04 219" stroke="#1e1e1e" stroke-width="2" fill="none"/></g><text data-element="text" id="mm-class-nodetext-Dog" x="98.203125" y="263.8" fill="#1e1e1e" font-family="Excalifont, cursive" font-size="16" text-anchor="middle" data-font-source="fallback:Excalifont"><tspan x="98.203125" y="263.8">Dog</tspan><tspan x="98.203125" dy="20">---</tspan><tspan x="98.203125" dy="20">+bark() : void</tspan></text><g data-element="arrow" id="mm-class-edge-0" data-start-binding="mm-class-node-Animal" data-end-binding="mm-class-node-Dog"><path d="M98.203125 172 L98.203125 193 L98.203125 214" stroke="#1e1e1e" stroke-width="2" fill="none"/><polygon points="98.203125,214 92.203125,202 104.203125,202" stroke="#1e1e1e" stroke-width="2" fill="#1e1e1e"/></g></g></svg>
