crates/excalidraw-mermaid/tests/snapshots/svg@class_inheritance.snap
---
source: crates/excalidraw-mermaid/tests/snapshots.rs
description: Rendered SVG for class_inheritance.mmd
---
<?xml version="1.0" encoding="UTF-8"?><svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="455" height="647" viewBox="-18.5 -18.5 454.4375 647"><rect x="-18.5" y="-18.5" width="454.4375" height="647" fill="#ffffff"/><g id="excalidraw-content"><g><path d="M0.39 234.71 L178.3 237.35 L175.59 402.96 L1.47 404.93" stroke="none" stroke-width="0" fill="#e9ecef"/><path d="M-1.84 236.71 C36.83 233.48, 71.79 233.09, 175.36 236.55 M0.73 235.77 C60.84 237.32, 122.1 237.67, 176.44 236.51 M174.97 237.01 C178.77 270.55, 179.36 301.66, 175.56 405.67 M176.39 235.37 C177.47 277.2, 177.93 318.88, 176.39 404.95 M175.99 402.63 C115.62 407.05, 52.51 404.36, -0.66 404.49 M177.04 403.83 C107.21 403.02, 37.15 402.07, -0.62 403.95 M0.55 403.68 C1.13 360.19, 0.87 315.93, -0.76 235.47 M-0.59 404.62 C-0.11 343.96, -1.52 284.6, -0.73 237" stroke="#1e1e1e" stroke-width="2" fill="none"/></g><text x="88.19921875" y="282.8" fill="#1e1e1e" font-family="Excalifont, cursive" font-size="16" text-anchor="middle" data-font-source="fallback:Excalifont"><tspan x="88.19921875" y="282.8">Circle</tspan><tspan x="88.19921875" dy="20">+float radius</tspan><tspan x="88.19921875" dy="20">---</tspan><tspan x="88.19921875" dy="20">+float area()</tspan><tspan x="88.19921875" dy="20">+float perimeter()</tspan></text><g><path d="M226.78 222.71 L419.34 225.35 L416.63 414.96 L227.87 416.93" stroke="none" stroke-width="0" fill="#e9ecef"/><path d="M224.56 224.71 C266.24 221.34, 304.23 220.95, 416.4 224.55 M227.13 223.77 C292.33 225.44, 358.67 225.78, 417.48 224.51 M416.01 225.01 C419.97 263.37, 420.56 299.29, 416.6 417.67 M417.43 223.37 C418.72 271.09, 419.18 318.64, 417.43 416.95 M417.03 414.63 C351.47 419.14, 283.18 416.45, 225.74 416.49 M418.08 415.83 C342.47 414.88, 266.62 413.93, 225.77 415.95 M226.95 415.68 C227.45 365.86, 227.19 315.26, 225.64 223.47 M225.81 416.62 C226.15 347.43, 224.75 279.53, 225.67 225" stroke="#1e1e1e" stroke-width="2" fill="none"/></g><text x="321.91796875" y="272.8" fill="#1e1e1e" font-family="Excalifont, cursive" font-size="16" text-anchor="middle" data-font-source="fallback:Excalifont"><tspan x="321.91796875" y="272.8">Rectangle</tspan><tspan x="321.91796875" dy="20">+float width</tspan><tspan x="321.91796875" dy="20">+float height</tspan><tspan x="321.91796875" dy="20">---</tspan><tspan x="321.91796875" dy="20">+float area()</tspan><tspan x="321.91796875" dy="20">+float perimeter()</tspan></text><g><path d="M109.16 -1.29 L303.24 1.35 L300.53 172.96 L110.25 174.93" stroke="none" stroke-width="0" fill="#e9ecef"/><path d="M106.94 0.71 C148.94 -2.67, 187.23 -3.06, 300.3 0.55 M109.51 -0.23 C175.24 1.45, 242.11 1.8, 301.38 0.51 M299.91 1.01 C303.76 35.76, 304.34 68.07, 300.5 175.67 M301.33 -0.63 C302.47 42.67, 302.93 85.82, 301.33 174.95 M300.94 172.63 C234.84 177.15, 166 174.46, 108.12 174.49 M301.98 173.83 C225.77 172.86, 149.32 171.91, 108.15 173.95 M109.33 173.68 C109.89 128.61, 109.62 82.76, 108.01 -0.53 M108.19 174.62 C108.63 111.83, 107.23 50.33, 108.05 1" stroke="#1e1e1e" stroke-width="2" fill="none"/></g><text x="205.05859375" y="59.8" fill="#1e1e1e" font-family="Excalifont, cursive" font-size="16" text-anchor="middle" data-font-source="fallback:Excalifont"><tspan x="205.05859375" y="59.8">Shape</tspan><tspan x="205.05859375" dy="20">---</tspan><tspan x="205.05859375" dy="20">+float area()</tspan><tspan x="205.05859375" dy="20">+float perimeter()</tspan></text><g><path d="M252.08 464.71 L394.04 467.35 L391.33 608.96 L253.16 610.93" stroke="none" stroke-width="0" fill="#e9ecef"/><path d="M249.86 466.71 C281.12 463.82, 308.68 463.43, 391.1 466.55 M252.43 465.77 C300.05 467.03, 348.81 467.38, 392.18 466.51 M390.71 467.01 C394.35 495.74, 394.94 522.03, 391.3 611.67 M392.14 465.37 C393 501.32, 393.47 537.11, 392.13 610.95 M391.74 608.63 C344.09 612.82, 293.71 610.13, 251.04 610.49 M392.78 609.83 C337.16 609.37, 281.3 608.42, 251.07 609.95 M252.25 609.68 C252.9 572.53, 252.63 534.61, 250.93 465.47 M251.1 610.62 C251.71 558.49, 250.31 507.66, 250.97 467" stroke="#1e1e1e" stroke-width="2" fill="none"/></g><text x="321.91796875" y="510.8" fill="#1e1e1e" font-family="Excalifont, cursive" font-size="16" text-anchor="middle" data-font-source="fallback:Excalifont"><tspan x="321.91796875" y="510.8">Square</tspan><tspan x="321.91796875" dy="20">+float side</tspan><tspan x="321.91796875" dy="20">---</tspan><tspan x="321.91796875" dy="20">+float area()</tspan></text><g id="mm-class-edge-0" data-start-binding="mm-class-node-Shape" data-end-binding="mm-class-node-Circle"><path d="M111.39606840692663 176.7677472468445 L88.19921875 199 L88.19921875 232" stroke="#1e1e1e" stroke-width="2" fill="none"/><polygon points="88.19921875,232 82.19921875,220 94.19921875,220" stroke="#1e1e1e" stroke-width="2" fill="#1e1e1e"/></g><g id="mm-class-edge-1" data-start-binding="mm-class-node-Shape" data-end-binding="mm-class-node-Rectangle"><path d="M298.72111909307336 176.7677472468445 L321.91796875 199 L321.91796875 220" stroke="#1e1e1e" stroke-width="2" fill="none"/><polygon points="321.91796875,220 315.91796875,208 327.91796875,208" stroke="#1e1e1e" stroke-width="2" fill="#1e1e1e"/></g><g id="mm-class-edge-2" data-start-binding="mm-class-node-Rectangle" data-end-binding="mm-class-node-Square"><path d="M321.91796875 420 L321.91796875 441 L321.91796875 462" stroke="#1e1e1e" stroke-width="2" fill="none"/><polygon points="321.91796875,462 315.91796875,450 327.91796875,450" stroke="#1e1e1e" stroke-width="2" fill="#1e1e1e"/></g></g></svg>
